using DogApp.Modellayer.EntityModels;
using DogApp.ModelLayer.Repositories;

namespace DogApp.Modellayer.Repositories;

public interface IItemRepo : IGenericRepository<Item>
{
   
}