using DogApp.ModelLayer.Repositories;
using DogApp.Modellayer.EntityModels;

namespace DogApp.Modellayer.Repositories
{
    public interface ITrackRepo : IGenericRepository<Track>
    {
    }
}
